--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
+dill==0.3.3
 Django==3.1.4
+django-bootstrap4==2.3.1
 gunicorn==20.0.4
 idna==2.10
 influxdb==5.3.1
+joblib==1.0.0
+llvmlite==0.35.0
 msgpack==1.0.2
+numba==0.52.0
+numpy==1.19.4
+opencv-contrib-python==4.4.0.46
 Pillow==8.0.1
 python-dateutil==2.8.1
 pytz==2020.5
 requests==2.25.1
+scikit-learn==0.22.2.post1
+scipy==1.5.4
 six==1.15.0
+sklearn==0.0
+soupsieve==2.1
 sqlparse==0.4.1
+threadpoolctl==2.1.0
 urllib3==1.26.2
